--- a/service/package.json
+++ b/service/package.json
@@ -1,24 +1,34 @@
 {
   "name": "service",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --require dotenv/config app.js",
+    "lint": "eslint .",
+    "start": "nodemon --inspect --require dotenv/config app.js",
     "dbInit": "node --experimental-json-modules --require dotenv/config scripts/dbInit.js",
     "dbDeinit": "node --require dotenv/config scripts/dbDeinit.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
+    "cors": "2.8.5",
+    "dotenv": "16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1"
+    "express-validator": "6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "6.2.1",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "description": ""
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1"
+  }
 }
